hphp/hack/test/typecheck/expression_trees/interpolated_string.php.like_types.exp
File "interpolated_string.php", line 10, characters 7-19:
Unsupported syntax for expression trees. (Parsing[1002])
File "interpolated_string.php", line 7, characters 5-60:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 42, characters 41-79:
  But got `dynamic` because it is an unenforceable type
File "interpolated_string.php", line 8, characters 12-18:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 35, characters 5-45:
  But got `dynamic` because it is an unenforceable type
File "interpolated_string.php", line 10, characters 10-18:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 35, characters 5-45:
  But got `dynamic` because it is an unenforceable type
